Aligned grid container using grid-template-columns. Fix css rule not being applied by assigning the correct class to the article element.

--- a/2 - multi-column/styles.css
+++ b/2 - multi-column/styles.css
@@ -18,3 +18,28 @@ h3 {
 p {
   color: #828b8a;
 }
+
+header {
+  max-width: 1200px;
+  margin: 40px auto;
+  border-bottom: 1px solid #bbc7c7;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 60px;
+  max-width: 1200px;
+  margin: 20px auto;
+}
+
+article.featured {
+  grid-column: span 3;
+}
+
+article img,
+article.featured img {
+  width: 100%;
+  border: 4px solid #fff;
+  border-radius: 8px;
+}
